Provided detailed Descriptions to all templates. Fixed Launch Template Userdata issue w.r.t s3 sync --exclude bug. Removed underscore from template names.

--- a/cfn-templates/dh-openvpn-cfn-cw.yaml
+++ b/cfn-templates/dh-openvpn-cfn-cw.yaml
@@ -1,13 +1,10 @@
 ---
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >
-  Cloudwatch Notices for OpenVPN Implementation.
-  A Nested Stack that comprises:
-  Bla Bla.
-  Inputs include:
-  Bla Bla.
-  Outputs include:
-  Bla Bla.
+  Two Cloudwatch metrics from the AWS/AutoScaling Namespace are used to create 
+  Alarms for OpenVPN Implementation. These monitor the number of instances in 
+  each out-of-service and in-service state.
+
 # ------------------------------------------
 
 
