--- a/cfn-templates/dh-openvpn-cfn-vpc.yaml
+++ b/cfn-templates/dh-openvpn-cfn-vpc.yaml
@@ -1,7 +1,7 @@
 ---
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >
-  A VPC declaration comprising a public and private subnet, spaning two 
+  A VPC declaration comprising a public and private subnet, spaning two
   availability zones. The following auxillary components are included here:
 
   Public & Private Route Tables.
@@ -49,15 +49,15 @@ Parameters:
   BuildStep:
     Description: "Specify the Stage of the Build"
     Type: String
-    Default: "Stage1"
+    Default: "stage1"
 
 
 # ==========================================
 # Conditions: {}
 Conditions:
-  # CreateResourcesStage1: !Equals [ !Ref BuildStep, "Stage1"]
-  CreateResourcesStage2: !Equals [!Ref BuildStep, "Stage2"]
-  # CreateResourcesStage3: !Equals [!Ref BuildStep, "Stage3"]
+  # CreateResourcesStage1: !Equals [ !Ref BuildStep, "stage1"]
+  CreateResourcesStage2: !Equals [!Ref BuildStep, "stage2"]
+  # CreateResourcesStage3: !Equals [!Ref BuildStep, "stage3"]
 
 
 # ==========================================
