--- a/cfn-templates/dh-openvpn-cfn.yaml
+++ b/cfn-templates/dh-openvpn-cfn.yaml
@@ -1,12 +1,12 @@
 ---
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >
-  An standalone openvpn server with a privately isolated pki certification 
-  authority. Code design comprises a two-level hierarchical structure composed 
+  An standalone openvpn server with a privately isolated pki certification
+  authority. Code design comprises a two-level hierarchical structure composed
   of a single root and one-level of child nested templates.
 
-  Orchestration is controlled via shell script commands and is achieved in a 
-  three phase stack creation/update process that is promoted via a counter 
+  Orchestration is controlled via shell script commands and is achieved in a
+  three phase stack creation/update process that is promoted via a counter
   variable.
 
   Nested template components include:
@@ -18,7 +18,7 @@ Description: >
   A Private EC2 Instance declaration.
   An Auto Scaling Group.
   A EC2 Launch Template.
-  A SNS Notification Topic. 
+  A SNS Notification Topic.
   A Cloudwatch Alarm.
   A Target Group.
   A Network Load Balancer.
@@ -37,18 +37,6 @@ Metadata: {}
 Parameters:
 
   # ------------------------------------------
-  # --- Script Build Step Counter
-  BuildStep:
-    Description: "Shell script step counter"
-    ConstraintDescription: "Must be > 0 & < 3"
-    Type: String
-    Default: "Stage1"
-    AllowedValues:
-      - "Stage1"
-      - "Stage2"
-      - "Stage3"
-
-  # ------------------------------------------
   # --- The Project Name
   ProjectName:
     Description: "Name of this Openvpn project"
@@ -59,6 +47,18 @@ Parameters:
     MaxLength: 63
     AllowedPattern:
       (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+
+  # ------------------------------------------
+  # --- Script Build Step Counter
+  BuildStep:
+    Description: "Shell script step counter"
+    ConstraintDescription: "Must be > 0 & < 3"
+    Type: String
+    Default: "stage1"
+    AllowedValues:
+      - "stage1"
+      - "stage2"
+      - "stage3"
 
   # ------------------------------------------
   # --- The Hosted Zone Domain Name
@@ -75,6 +75,17 @@ Parameters:
   DomainHostedZoneId:
     Description: "An Amazon Route 53 hosted zone ID"
     Type: "AWS::Route53::HostedZone::Id"
+
+  # ------------------------------------------
+  # --- IP CIDR for SSH Bastion Host
+  SshAccessCIDR:
+    Description: IP range for SSH access into Public Instance.
+    Type: String
+    MinLength: "9"
+    MaxLength: "18"
+    Default: 0.0.0.0/0
+    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
+    ConstraintDescription: Must be a valid IPv4 CIDR.
 
   # ------------------------------------------
   # --- Latest Amazon_Linux_2 AMI
@@ -101,9 +112,9 @@ Parameters:
 # ==========================================
 # Conditions: {}
 Conditions:
-  # CreateResourcesStage1: !Equals [ !Ref BuildStep, "Stage1"]
-  CreateResourcesStage2: !Equals [!Ref BuildStep, "Stage2"]
-  CreateResourcesStage3: !Equals [!Ref BuildStep, "Stage3"]
+  # CreateResourcesStage1: !Equals [ !Ref BuildStep, "stage1"]
+  CreateResourcesStage2: !Equals [!Ref BuildStep, "stage2"]
+  CreateResourcesStage3: !Equals [!Ref BuildStep, "stage3"]
 
 
 # ==========================================
@@ -164,6 +175,8 @@ Resources:
       Parameters:
         VPCID:
           !GetAtt VPCDef.Outputs.VPCID
+        SshAccessCIDR:
+          !Ref SshAccessCIDR
       TimeoutInMinutes: 5
 
 
