Defense-in-depth: Each EC2 Instance gets its own unique Instance Profile with least-privilege permissions. Specific EC2 Role in-line policies developed for each individual EC2 Instance Profile. Changed S3 Bucket Policy for json element insertion of the various IAM Role userids. Allowed openvpn clients to access IMAP & SMTP servers by opening ingress ports of the public NACL resource as well as iptables rules script. Privacy: DNS servers pushed by openvpn server configuration changed to OpenNIC Public Servers with Blocklist and no logs kept. Openvpn client templates given the proper FQDN for host resolution. Network Loadbalancer given unique name related to project name.

--- a/cfn-templates/dh-openvpn-cfn-ec2-lt.yaml
+++ b/cfn-templates/dh-openvpn-cfn-ec2-lt.yaml
@@ -77,7 +77,7 @@ Resources:
           - !Ref PublicSgResourceId
         # .............................
         IamInstanceProfile:
-          Name: !Sub "${ProjectName}-instance-profile-${AWS::Region}"
+          Name: !Sub "${ProjectName}-lt-iam-ec2-${AWS::Region}"
         # .............................
         UserData:
           Fn::Base64:
