--- a/openvpn/server/conf/dh-openvpn-server-tcp1194.conf
+++ b/openvpn/server/conf/dh-openvpn-server-tcp1194.conf
@@ -29,6 +29,11 @@ reneg-sec 3600
 prng SHA256 64
 #replay-window 64
 push "redirect-gateway def1 bypass-dhcp"
-push "dhcp-option DNS 208.67.222.222"
-push "dhcp-option DNS 208.67.220.220"
+# Cisco NetSec Enforcement Intelligence Filtering
+#push "dhcp-option DNS 208.67.222.222"
+#push "dhcp-option DNS 208.67.220.220"
+# OpenNIC .de DNSBL
+push "dhcp-option DNS 51.89.88.66"
+push "dhcp-option DNS 172.105.72.56"
+push "dhcp-option DNS 185.84.81.194"
 
