Instance Metadata Service Version 2 Token is now required for the Autoscaling Group Launch Template. Email Address used for SNS Notifications is now a script variable and is requested from stdin with relavent error checking. Unique inline Resource policy for S3 Access for Public and Lauch Template Instances.iptables: removed WebServer Input Rules; http input only allowed for network loadbalancer on local subnets.iptables: Instance Metadata Service is now only accessible from local subnets and logged. All other http/s paths are explicitly blocked.

--- a/cfn-templates/dh-openvpn-cfn-ec2-lt.yaml
+++ b/cfn-templates/dh-openvpn-cfn-ec2-lt.yaml
@@ -79,6 +79,11 @@ Resources:
         IamInstanceProfile:
           Name: !Sub "${ProjectName}-lt-iam-ec2-${AWS::Region}"
         # .............................
+        MetadataOptions:
+          HttpEndpoint: "enabled"
+          HttpTokens: "required"
+          HttpPutResponseHopLimit: 1
+        # .............................
         UserData:
           Fn::Base64:
             !Sub |
