--- a/cfn-templates/dh-openvpn-cfn-ec2-priv.yaml
+++ b/cfn-templates/dh-openvpn-cfn-ec2-priv.yaml
@@ -94,7 +94,7 @@ Resources:
       Tags:
         -
           Key: "Name"
-          Value: "openvpn-private"
+          Value: !Sub "${ProjectName}-ovpn-priv"
       # .............................
       AvailabilityZone:
         'Fn::Select':
