--- a/cfn-templates/dh-openvpn-cfn-ec2-pub.yaml
+++ b/cfn-templates/dh-openvpn-cfn-ec2-pub.yaml
@@ -94,7 +94,7 @@ Resources:
       Tags:
         -
           Key: "Name"
-          Value: "openvpn-public"
+          Value: !Sub "${ProjectName}-ovpn-pub"
       # .............................
       AvailabilityZone:
         'Fn::Select':
