CloudWatch Agent installed and configured via Cloudformation. Launch Template instance role modified to incorporate managed policy: CloudWatchAgentServerPolicy. iptables no longer records Instance Metadata Service traffic logs. Cleaned up redundant sshd_config modifications. Markdown progress made on README.md (not complete). Included Cloudformation flowchart for README.md.

--- a/cfn-templates/cfn-ovpn-cli-cw.yaml
+++ b/cfn-templates/cfn-ovpn-cli-cw.yaml
@@ -77,7 +77,7 @@ Resources:
       Dimensions:
         -
           Name: "AutoScalingGroupName"
-          Value: "openvpn-autoscaling-group"
+          Value: !Sub "${ProjectName}-autoscale-group"
 
   # ------------------------------------------
   # --- CloudWatch Alarm In Service Definition
@@ -107,7 +107,7 @@ Resources:
       Dimensions:
         -
           Name: "AutoScalingGroupName"
-          Value: "openvpn-autoscaling-group"
+          Value: !Sub "${ProjectName}-autoscale-group"
 
 
 # ==========================================
