--- a/cfn-templates/cfn-ovpn-cli-ec2-priv.yaml
+++ b/cfn-templates/cfn-ovpn-cli-ec2-priv.yaml
@@ -105,7 +105,7 @@ Resources:
       DisableApiTermination: false
       IamInstanceProfile: !Sub "${ProjectName}-priv-iam-ec2-${AWS::Region}"
       ImageId: !Ref PrivateAmiId
-      InstanceType: "t2.nano"
+      InstanceType: "t2.micro"
       KeyName: !Sub "dh.ec2.ssh.admin.console_${AWS::Region}"
       Monitoring: false
       # .............................
@@ -227,14 +227,7 @@ Resources:
               fail2ban: []
           sources:
             /tmp:
-              !Join
-              - ""
-              - - "https://"
-                - !Ref ProjectName
-                - ".s3."
-                - !Ref "AWS::Region"
-                - ".amazonaws.com/"
-                - "ssh/cfn-ovpn-cli-ec2-harden-ssh.sh.tar.gz"
+              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/ssh/cfn-ovpn-cli-ec2-harden-ssh.sh.tar.gz"
           files:
             "/etc/fail2ban/jail.local":
               content: |
@@ -283,31 +276,9 @@ Resources:
               iptables-services: []
           sources:
             /tmp:
-              !Join
-              - ""
-              - - "https://"
-                - !Ref ProjectName
-                - ".s3."
-                - !Ref "AWS::Region"
-                - ".amazonaws.com/"
-                - "iptables/cfn-ovpn-cli-ec2-priv-iptables.sh.tar.gz"
-          files:
-            "/etc/sysctl.d/30-cfn-ovpn-cli-iptables.conf":
-              content: |
-                #net.ipv4.ip_forward = 1
-                net.ipv6.conf.default.disable_ipv6 = 1
-                net.ipv6.conf.all.disable_ipv6 = 1
-                kernel.randomize_va_space = 1
-                net.ipv4.conf.default.rp_filter = 1
-                net.ipv4.conf.all.rp_filter = 1
-                net.ipv4.tcp_syncookies = 1
-              mode: '000644'
-              owner: "root"
-              group: "root"
+              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/iptables/cfn-ovpn-cli-ec2-priv-iptables.sh.tar.gz"
           commands:
-            1_kernelParams:
-              command: "sysctl -p /etc/sysctl.d/30-cfn-ovpn-cli-iptables.conf"
-            2_iptRules:
+            iptRules:
               cwd: "/tmp/iptables"
               command: "./cfn-ovpn-cli-ec2-priv-iptables.sh"
           services:
@@ -316,7 +287,7 @@ Resources:
                 ensureRunning: "true"
                 enabled: "true"
                 commands:
-                  - "2_iptRules"
+                  - "iptRules"
         # / / / / / / / / / / / / / / /
         configLogs:
           files:
@@ -385,14 +356,7 @@ Resources:
               group: "root"
           sources:
             /tmp/sign-reqs:
-              !Join
-              - ""
-              - - "https://"
-                - !Ref ProjectName
-                - ".s3."
-                - !Ref "AWS::Region"
-                - ".amazonaws.com/"
-                - "easy-rsa/sign-reqs/cfn-ovpn-cli-easyrsa-sign-reqs.tar.gz"
+              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/easy-rsa/sign-reqs/cfn-ovpn-cli-easyrsa-sign-reqs.tar.gz"
           commands:
             1a_initPKI:
               command: "mkdir -p /usr/local/easy-rsa && cp -r /usr/share/easy-rsa/3/* $_"
