--- a/cfn-templates/cfn-ovpn-cli-ec2-pub.yaml
+++ b/cfn-templates/cfn-ovpn-cli-ec2-pub.yaml
@@ -105,7 +105,7 @@ Resources:
       DisableApiTermination: false
       IamInstanceProfile: !Sub "${ProjectName}-pub-iam-ec2-${AWS::Region}"
       ImageId: !Ref PublicAmiId
-      InstanceType: "t2.nano"
+      InstanceType: "t2.micro"
       KeyName: !Sub "dh.ec2.ssh.admin.console_${AWS::Region}"
       Monitoring: false
       # .............................
@@ -228,14 +228,7 @@ Resources:
               fail2ban: []
           sources:
             /tmp:
-              !Join
-              - ""
-              - - "https://"
-                - !Ref ProjectName
-                - ".s3."
-                - !Ref "AWS::Region"
-                - ".amazonaws.com/"
-                - "ssh/cfn-ovpn-cli-ec2-harden-ssh.sh.tar.gz"
+              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/ssh/cfn-ovpn-cli-ec2-harden-ssh.sh.tar.gz"
           files:
             "/etc/fail2ban/jail.local":
               content: |
@@ -284,31 +277,9 @@ Resources:
               iptables-services: []
           sources:
             /tmp:
-              !Join
-              - ""
-              - - "https://"
-                - !Ref ProjectName
-                - ".s3."
-                - !Ref "AWS::Region"
-                - ".amazonaws.com/"
-                - "iptables/cfn-ovpn-cli-ec2-pub-iptables.sh.tar.gz"
-          files:
-            "/etc/sysctl.d/30-cfn-ovpn-cli-iptables.conf":
-              content: |
-                net.ipv4.ip_forward = 1
-                net.ipv6.conf.default.disable_ipv6 = 1
-                net.ipv6.conf.all.disable_ipv6 = 1
-                kernel.randomize_va_space = 1
-                net.ipv4.conf.default.rp_filter = 1
-                net.ipv4.conf.all.rp_filter = 1
-                net.ipv4.tcp_syncookies = 1
-              mode: '000644'
-              owner: "root"
-              group: "root"
+              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/iptables/cfn-ovpn-cli-ec2-pub-iptables.sh.tar.gz"
           commands:
-            1_kernelParams:
-              command: "sysctl -p /etc/sysctl.d/30-cfn-ovpn-cli-iptables.conf"
-            2_iptRules:
+            iptRules:
               cwd: "/tmp/iptables"
               command: "./cfn-ovpn-cli-ec2-pub-iptables.sh"
           services:
@@ -317,9 +288,15 @@ Resources:
                 ensureRunning: "true"
                 enabled: "true"
                 commands:
-                  - "2_iptRules"
+                  - "iptRules"
         # / / / / / / / / / / / / / / /
         configLogs:
+          packages:
+            rpm:
+              cloudwatch-agent: "https://s3.amazonaws.com/amazoncloudwatch-agent/amazon_linux/amd64/latest/amazon-cloudwatch-agent.rpm"
+          sources:
+            /opt/aws/amazon-cloudwatch-agent/etc:
+              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/logs/${ProjectName}-amzn-cw-agent.json.tar.gz"
           files:
             # .............................
             "/etc/rsyslog.d/30-iptables.conf":
@@ -408,14 +385,7 @@ Resources:
               group: "root"
           sources:
             /usr/local:
-              !Join
-              - ""
-              - - "https://"
-                - !Ref ProjectName
-                - ".s3."
-                - !Ref "AWS::Region"
-                - ".amazonaws.com/"
-                - "easy-rsa/cfn-ovpn-cli-vars/cfn-ovpn-cli-easyrsa-vars.tar.gz"
+              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/easy-rsa/cfn-ovpn-cli-vars/cfn-ovpn-cli-easyrsa-vars.tar.gz"
           commands:
             1a_initPKI:
               command: "mkdir -p /usr/local/easy-rsa && cp -r /usr/share/easy-rsa/3/* $_"
@@ -473,14 +443,7 @@ Resources:
               openvpn: []
           sources:
             /etc/openvpn/server:
-              !Join
-              - ""
-              - - "https://"
-                - !Ref ProjectName
-                - ".s3."
-                - !Ref "AWS::Region"
-                - ".amazonaws.com/"
-                - "openvpn/server/conf/cfn-ovpn-cli-server-1194.conf.tar.gz"
+              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/openvpn/server/conf/cfn-ovpn-cli-server-1194.conf.tar.gz"
           files:
             "/usr/local/bin/vpn-server-status":
               content: |
