script now accomodates --region & --profile variables + some more work on the github readme page.

--- a/cfn-templates/cfn-ovpn-cli-ec2-priv.yaml
+++ b/cfn-templates/cfn-ovpn-cli-ec2-priv.yaml
@@ -106,7 +106,7 @@ Resources:
       IamInstanceProfile: !Sub "${ProjectName}-priv-iam-ec2-${AWS::Region}"
       ImageId: !Ref PrivateAmiId
       InstanceType: "t2.micro"
-      KeyName: !Sub "dh.ec2.ssh.admin.console_${AWS::Region}"
+      KeyName: !Sub "aws.dev.ec2.ssh.key.${AWS::Region}"
       Monitoring: false
       # .............................
       BlockDeviceMappings:
