--- a/openvpn/server/conf/cfn-ovpn-cli-server-udp1194.conf
+++ b/openvpn/server/conf/cfn-ovpn-cli-server-udp1194.conf
@@ -32,8 +32,8 @@ push "redirect-gateway def1 bypass-dhcp"
 # Cisco NetSec Enforcement Intelligence Filtering
 #push "dhcp-option DNS 208.67.222.222"
 #push "dhcp-option DNS 208.67.220.220"
-# OpenNIC .de Anon DNSBL 
-push "dhcp-option DNS 51.89.88.66"
-push "dhcp-option DNS 172.105.72.56"
-push "dhcp-option DNS 185.84.81.194"
+# OpenNIC .de DNSBL
+push "dhcp-option DNS 94.247.43.254"
+push "dhcp-option DNS 172.104.136.243"
+push "dhcp-option DNS 78.47.243.3"
 
